--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .grid {
     display: inline-block;
     border-collapse: collapse;
+    border: 1px solid grey;
 }
 
 .row {
@@ -10,5 +11,5 @@
 .cell {
     width: 30px;
     height: 30px;
-    border: 1px solid #000;
+    border: 1px dashed #000;
 }
