--- a/style.css
+++ b/style.css
@@ -12,4 +12,18 @@
     width: 30px;
     height: 30px;
     border: 1px dashed #000;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+}
+
+.bomb {}
+
+.cellbomb {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
 }
