--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: inline-block;
     border-collapse: collapse;
     border: 1px solid grey;
+    background-color: #CFCFCF;
 }
 
 .row {
