--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .grid {
     display: inline-block;
     border-collapse: collapse;
@@ -10,15 +17,13 @@
 }
 
 .cell {
-    width: 30px;
-    height: 30px;
-    border: 1px dashed #000;
+    width: 50px;
+    height: 50px;
+    border: 1.5px dashed #000;
     display: flex;
     justify-content: center;
     font-size: 16px;
 }
-
-.bomb {}
 
 .cellbomb {
     display: block;
@@ -27,4 +32,39 @@
     left: 50%;
     width: 50px;
     height: 50px;
+}
+
+.one {
+    color: blue;
+    font-weight: 600;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.two {
+    color: green;
+    font-weight: 600;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.three {
+    color: red;
+    font-weight: 600;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bomb-img {
+    width: 200%;
+    height: 200%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
