--- a/style.css
+++ b/style.css
@@ -68,3 +68,9 @@ body {
     justify-content: center;
     align-items: center;
 }
+.full .button {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
